hdparm-9.1
	- tidy up output from --dco-identify, add more info to manpage
	- add kernel (device driver) bug detection/warning to -N output
hdparm-9.0
	- update debian directory contents
	- add --dco-freeze, --dco-identify, --dco-restore flags
	- fix sgio.c to be more clever around the lba28 boundary
	- add supposedly obsolete "cache/buffer size" reporting to -I
	- new --fwdownload flag
	- fix error reporting from sg16().
	- dump entire returned sense desc[] in sgio.c with --verbose
hdparm-8.9
	- support /sys/block symlinks (some kernels seem to have those).
hdparm-8.8
	- fix -r, -a so that they display their values again (duh).
	- define BLKGETSIZE64 locally to avoid broken system headers that use u64 with it.
	- update man page to indicate that --security-* flags must be standalone
	- fix -Q to permit querying queue_depth (was broken in v8.7).
hdparm-8.7
	- fixes to permit building against older kernels which lack SG_IO
	- added build script for empeg systems
	- removed -R, -U flags: kernel support is broken and being removed
	- fixed IO_support output
	- prevent error messages from default flags
	- added sysfs.c, geom.c, fibmap.c
	- use sysfs for device start_lba/nsectors values whereever possible (for >= 2TB drives)
	- new standalone --fibmap and --fibmap-sector flags
	- converted -Q to access the queue_depth attribute from sysfs (now works for SATA!)
	- fixed readonly issue with optical drives that some people noticed
hdparm-8.6
	- add partition safeguards to r/w sector and make_bad_sector
hdparm-8.5
	- fix u8->u16 bug in security commands for all of 8.x series, Christian Franke
	- try and quiet errors from flush_buffer_cache()
hdparm-8.4
	- oops: v8.3 broke --write-sector.  Fix it again.
hdparm-8.3
	- fixed -i display for udma6
	- try and exit with errno on fail paths, from Ladislav Michnovic
hdparm-8.2
	- clear feat register for safety with SET_MAX_ADDRESS command
	- add note to manpage regarding possible -N transient failures